--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+        xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Create</title>
 </head>
 <body>
 <h1>Create</h1>
+<form action="http://localhost:8080/student/save" method="post">
+    <label>Name: </label>
+    <input type="text" name="name">
+    <br>
+    <label>Age: </label>
+    <input type="text" name="age">
+    <button type = "submit">submit</button>
+</form>
 </body>
 </html>
