--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -7,12 +7,15 @@
 </head>
 <body>
 <h1>Create</h1>
-<form action="http://localhost:8080/student/save" method="post">
-    <label>Name: </label>
-    <input type="text" name="name">
+<form action="http://localhost:8080/student/save" method="post" th:object="${student}">
+    <label>id: </label>
+    <input type="text" th:field="*{sid}">
     <br>
-    <label>Age: </label>
-    <input type="text" name="age">
+    <label>Name: </label>
+    <input type="text" th:field="*{sname}">
+    <br>
+    <label>cid: </label>
+    <input type="text" th:field="*{cid}">
     <button type = "submit">submit</button>
 </form>
 </body>
