--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html
+        xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Details</title>
 </head>
 <body>
-<h1>Details</h1>
+<h1 th:text="${'ten la ' + name}"></h1>
 </body>
 </html>
