finish creating a new subject

--- a/src/main/resources/templates/subject/getList.html
+++ b/src/main/resources/templates/subject/getList.html
@@ -33,5 +33,7 @@
             <td th:text="${pro.SjName}"></td>
         </tr>
     </table>
+    <br>
+<a href="http://localhost:8080/subj/create">Tạo mới</a>
 </body>
 </html>
